--- a/web/template/template.xhtml
+++ b/web/template/template.xhtml
@@ -5,7 +5,7 @@
       xmlns:h="http://java.sun.com/jsf/html">
 
     <h:head>
-        <base href="http://localhost:8080/SistemaCaronasJDBC/" />
+        <base href="http://localhost:8080/SistemaCaronas/" />
         <title>Sistema de Caronas Unipampa</title>
 
         <meta charset="utf-8" />
